# dlib-tutorial

./: .gitignore  CMakeLists.txt  README.md
include/dlib/: config.h
include/dlib/cuda/: cudnn_dlibapi.h
include/dlib/dnn/: loss.h
include/opencv2/: cvconfig.h
include/opencv2/core/: simd_intrinsics.hpp
include/opencv2/core/cuda/detail/: color_detail.hpp  reduce.hpp  reduce_key_val.hpp  transform_detail.hpp
include/opencv2/core/detail/: async_promise.hpp
include/opencv2/core/utils/: allocator_stats.hpp
include/opencv2/dnn/: dnn.hpp
include/opencv2/dnn/utils/: inference_engine.hpp
include/opencv2/flann/: hdf5.h
source/: dnn_face_recognition_ex.cpp  face_detect.cpp  video_capture.cpp  window.cpp
